--- a/app/src/main/res/layout/fragment_register_face_success.xml
+++ b/app/src/main/res/layout/fragment_register_face_success.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
-    android:id="@+id/root_view"
     android:clickable="true"
     android:focusable="true">
 
@@ -12,8 +12,10 @@
         android:id="@+id/finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/y16"
-        android:layout_marginTop="@dimen/y20"
+        android:paddingBottom="@dimen/y20"
+        android:paddingEnd="@dimen/y16"
+        android:paddingStart="@dimen/y16"
+        android:paddingTop="@dimen/y20"
         android:text="@string/FINISHED"
         android:textColor="@color/color_4b9fd5_selector"
         android:textSize="@dimen/sp14"
