--- a/app/src/main/res/layout/custom_edit_text.xml
+++ b/app/src/main/res/layout/custom_edit_text.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/y54"
+    android:focusable="true"
     android:paddingEnd="@dimen/y20"
     android:paddingStart="@dimen/y20">
 
@@ -41,10 +42,10 @@
 
     <CheckBox
         android:id="@+id/show"
-        android:padding="@dimen/y7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:button="@drawable/icon_common_show_pwd_selector"
+        android:padding="@dimen/y7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
