1.修改输入名称崩溃 2.修复注册拉起华为键盘问题

--- a/app/src/main/res/layout/activity_register_face.xml
+++ b/app/src/main/res/layout/activity_register_face.xml
@@ -68,6 +68,7 @@
         android:layout_marginTop="@dimen/y10"
         android:gravity="center_horizontal|bottom"
         android:hint="@string/LOCATION_NAME_ERROR"
+        android:inputType="text"
         android:textColor="@color/color_666666"
         android:textColorHint="@color/color_cecece"
         app:layout_constraintEnd_toEndOf="parent"
