--- a/app/src/main/res/layout/layout_item_cam_load_more.xml
+++ b/app/src/main/res/layout/layout_item_cam_load_more.xml
@@ -3,6 +3,8 @@
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clickable="false"
+    android:focusable="false"
     android:orientation="horizontal">
 
     <LinearLayout
