1.有线设备无网络 ssid 导致现在离线 bug 2.区域侦测有时候图像整体变小 bug 3.修复没有清晰度切换的设备直播是清晰度切换闪一下 bug 4.修复门铃直播对讲按钮置灰不可点击 bug 5.新增人脸删除接口 6.更新语言包,图标 7.发送 WiFi 配置逻辑调整

--- a/app/src/main/res/layout/fragment_home_mine_setting_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting_about.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/y60"
             android:layout_marginTop="@dimen/y56"
-            android:src="@drawable/and_logo_about_180x180" />
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/tv_app_version"
@@ -44,11 +44,11 @@
             android:textSize="@dimen/sp16" />
 
         <com.cylan.jiafeigou.widget.SettingItemView0
-            android:layout_marginTop="@dimen/y74"
             android:id="@+id/sv_official_website"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y72"
             android:layout_marginStart="@dimen/x15"
+            android:layout_marginTop="@dimen/y74"
             hunt:sv_sub_title="@string/show_web"
             hunt:sv_title="@string/WEB"
             hunt:sv_v_divider="true" />
