--- a/app/src/main/res/layout/layout_toolbar_camera_live.xml
+++ b/app/src/main/res/layout/layout_toolbar_camera_live.xml
@@ -39,7 +39,6 @@
         app:t_border_width="@dimen/y1"
         app:t_point_color="@color/color_red_dot_f43531"
         app:t_radius="@dimen/x4"
-        app:t_round_image="true"
-        app:t_show_point="true" />
+        app:t_round_image="true" />
 
 </FrameLayout>
