--- a/app/src/main/res/values-v11/styles.xml
+++ b/app/src/main/res/values-v11/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/color_4b9fd5</item>
         <item name="colorControlNormal">@color/color_4b9fd5</item>
         <item name="colorControlActivated">@color/color_4b9fd5</item>
