--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -48,6 +48,18 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/imgV_land_cam_switch_motion_area"
+                style="@style/ripple_background"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/icon_motion_area_selector"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="@dimen/x18"
+                android:paddingRight="@dimen/x18" />
+
+            <ImageView
                 android:id="@+id/imgV_land_cam_switch_xunhuan"
                 style="@style/ripple_background"
                 android:layout_width="wrap_content"
