--- a/app/src/main/res/drawable/icon_motion_area_selector.xml
+++ b/app/src/main/res/drawable/icon_motion_area_selector.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/camera_icon_zone_close" android:state_enabled="false" />
-    <item android:drawable="@drawable/camera_icon_zone_close" android:state_selected="false" />
-    <item android:drawable="@drawable/camera_icon_zone_normal" android:state_selected="true" />
+    <item android:drawable="@drawable/camera_icon_zone_disabled" android:state_enabled="false" />
+    <item android:drawable="@drawable/camera_icon_zone_close_pressed" android:state_pressed="true" android:state_selected="false" />
+    <item android:drawable="@drawable/camera_icon_zone_close_normal" android:state_selected="false" />
+    <item android:drawable="@drawable/camera_icon_zone_startup_pressed" android:state_pressed="true" android:state_selected="true" />
+    <item android:drawable="@drawable/camera_icon_zone_startup_normal" android:state_selected="true" />
 </selector>
