--- a/app/src/main/res/layout/activity_cam_setting.xml
+++ b/app/src/main/res/layout/activity_cam_setting.xml
@@ -103,6 +103,17 @@
                 hunt:sv_v_image_show="true" />
 
             <com.cylan.jiafeigou.widget.SettingItemView0
+                android:id="@+id/sv_setting_device_mobile_mode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                hunt:sv_image_src="@drawable/setting_icon_network"
+                hunt:sv_sub_title="cylan608"
+                hunt:sv_title="@string/NETWORK_1"
+                hunt:sv_v_divider="true"
+                hunt:sv_v_image_show="true" />
+
+            <com.cylan.jiafeigou.widget.SettingItemView0
                 android:id="@+id/sv_setting_device_soft_ap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
