隐藏消费类摄像机, AI 半球机,智能摄像机电池板入口

--- a/app/src/_aiface/res/values/oem_.xml
+++ b/app/src/_aiface/res/values/oem_.xml
@@ -23,4 +23,5 @@
     <integer name="max_password_length">32</integer>
     <string name="dog_ssid_prefix">AI-**-******</string>
     <item name="dog_bind_guide" format="reference" type="raw">@raw/bind_guide_ai</item>
+    <string name="app_oem_name">AIFace</string>
 </resources>
