--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -124,6 +124,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y67"
                 android:background="@color/color_white"
+                android:visibility="gone"
                 hunt:leftDrawable="@drawable/home_icon_cloud_camera"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/Cloud_Camera"
@@ -146,6 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y67"
                 android:background="@color/color_white"
+                android:visibility="gone"
                 hunt:leftDrawable="@drawable/home_icon_hemisphere"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/HALF_CAMERA"
@@ -157,6 +159,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y67"
                 android:background="@color/color_white"
+                android:visibility="gone"
                 hunt:leftDrawable="@drawable/home_icon_rs_online"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/Consumer_Camera"
