1.修复4G 摄像头在线图标错误, 2.修复程序日志记录文件为加菲狗的错误

--- a/app/src/_aiface/res/values/oem_.xml
+++ b/app/src/_aiface/res/values/oem_.xml
@@ -24,4 +24,5 @@
     <string name="dog_ssid_prefix">AI-**-******</string>
     <item name="dog_bind_guide" format="reference" type="raw">@raw/bind_guide_ai</item>
     <string name="app_oem_name">AIFace</string>
+    <string name="app_root_dir">AIFace</string>
 </resources>
